# minion-ros-gazeobo-rviz

./: README.md
Gazebo_Plugins/: ActorPlugin.cc  ActorPlugin.hh  ActuatorPlugin.cc  ActuatorPlugin.hh  CMakeLists.txt  piston_plugin (copy).cc  piston_plugin.cc  piston_plugin.hh
launch_robots/: pibot1.sh  pibot2.sh  pibot3.sh  pibot4.sh
minion_nmpc_planner/: CMakeLists.txt  package.xml
minion_nmpc_planner/cfg/: nmpcPlannerParams.cfg
minion_nmpc_planner/include/: nmpc_planner.h
minion_nmpc_planner/include/solver_force_1/: MPCsolver.cpp  MPCsolver.h  csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_obstacles/: MPCsolver.cpp  MPCsolver.h  csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_obstaclesV2/: MPCsolver.cpp  MPCsolver.h  csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_obstaclesV3/: MPCsolver.cpp  MPCsolver.h  csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_obstaclesV5/: MPCsolver.cpp  MPCsolver.h  csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_orientation/: MPCsolver.h  csolve.c  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_orientationV2/: csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_orientationV3/: MPCsolver.cpp  csolve.c  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c
minion_nmpc_planner/include/solver_orientationV3/cvxgen/: Makefile  csolve.m  cvxsolve.m  description.cvxgen  make_csolve.m  util.c
minion_nmpc_planner/include/solver_orientationV4/: csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/include/solver_orientationV5/: csolve.c  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
minion_nmpc_planner/launch/: planner_gazebo_7.0_Antipodal.launch  planner_gazebo_7.0_Diminishing.launch  planner_realTarget.launch
minion_nmpc_planner/src/: antipodal.cpp  antipodal_ang.bck  nmpc_planner.cpp  nmpc_planner_Angle.cpp  nmpc_planner_Diminishing.cpp  nmpc_planner_Tangential.cpp  nmpc_planner_bck
minion_robot/: CMakeLists.txt  package.xml
minion_robot/config/: diff_drive_controller.yaml  joint_controller.yaml  rrbot_control.yaml
minion_robot/include/: minion_state_tf_closer.h
minion_robot/launch/: controller_gazebo.launch  display_xacro.launch  g2g.launch  gazebo.launch  minion_battery_plugin.launch  minion_nodes.launch  minion_with_ID.launch  minion_with_ID.launch.bkp  minion_world.launch  piston_xacro.launch
minion_robot/scripts/: PibotAgent.py  cleanup.sh  followers_launch.py  setup_gazebo.sh
minion_robot/src/: frames.gv  g2g.py  minion.py  minion_ground_truth_tf_publisher.py  minion_state_tf_closer.cpp  pure_pursuit_test.py  tf_test_minion.py
minion_robot/urdf/: battery_minion.sdf  irobot.urdf.xacro  minion.urdf.xacro  minion.urdf.xacro.bkp  slider.urdf.xacro
minion_robot/worlds/: minon_world.world
pure_pursuit/cfg/: PurePursuit.cfg
pure_pursuit/launch/: pure_pursuit_controller.launch
pure_pursuit/src/: pure_pursuit.cpp
